--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Take Notes!</string>
+    <string name="app_name">TodoApp</string>
 
     <string name="no_data">No Data</string>
     <string name="title">Title</string>
